feat(*): layout the site add nav bar, footer, dark-light modes home layout, search bar (does nothing)

--- a/client/src/app/views/page-home/page-home.component.html
+++ b/client/src/app/views/page-home/page-home.component.html
@@ -1,1 +1,10 @@
-Hello would
+<div class="red-spice">
+  <h1>PAINT</h1>
+</div>
+<div class="content">
+  <div class="content-searchform">
+    <form>
+      <input type="text" placeholder="Search..." spellcheck />
+    </form>
+  </div>
+</div>
