--- a/client/src/app/components/nav-bar/nav-bar.component.html
+++ b/client/src/app/components/nav-bar/nav-bar.component.html
@@ -1,7 +1,8 @@
-<nav>
+<nav class="nav">
+  <span><a routerLink="">PAINT</a></span>
   <ul>
-    <li>About</li>
-    <li>Bots</li>
-    <li>Server</li>
+    <li><a routerLink="about">About</a></li>
+    <li><a>Bots</a></li>
+    <li><a>Servers</a></li>
   </ul>
 </nav>
