--- a/client/src/app/components/nav-bar/nav-bar.component.scss
+++ b/client/src/app/components/nav-bar/nav-bar.component.scss
@@ -1,12 +1,29 @@
+a {
+  color: #f3f3f3;
+  text-decoration: none;
+}
+
 nav {
-  font-size: 30px;
+  font-size: 1.2rem;
+  padding-top: 10px;
+  padding-left: 20px;
   background-color: #444444;
-  height: 60px;
+  color: #d8d8d8;
+  height: 50px;
   filter: drop-shadow(0px 4px 5px rgba(0, 0, 0, 0.25));
+  display: flex;
+  font-family: 'Roboto', sans-serif;
+  span {
+    color: #f8f8f8;
+    font-size: 1.5rem;
+    &:hover {
+      cursor: pointer;
+    }
+  }
   ul {
     display: flex;
     li {
-      font-family: 'Roboto', sans-serif;
+      text-align: center;
       list-style: none;
       text-decoration: none;
       margin-left: 20px;
